@@ -21,6 +21,7 @@ Version 1.1.1
 -------------
 * Add hwloc_get_api_version() which returns the version of hwloc used
   at runtime. Thanks to Guy Streeter for the suggestion.
+* Fix the number of hugepages reported for NUMA nodes on Linux.
 * Fix hwloc_bitmap_to_ulong() right after allocating the bitmap.
   Thanks to Bernd Kallies for reporting the problem.
 * Fix hwloc_bitmap_from_ith_ulong() to properly zero the first ulong.
